<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">com.minzong</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    
    <string name="guanji">关机</string>
    <string name="login">登陆</string>
    <string name="tuichu">退出</string>
    
    <string  name="moxing">模型</string>
    <string name="celiangjiange">自动测量间隔</string>
    <string name="mode">模式</string>
    
    <string name="tianjia">添加</string>
    <string name="shanchu">删除</string>
    
    <string name="zidingyi">自定义</string>
    <string name="canshu">参数</string>
    
    <string name="baocun">保存</string>
    <string name="fanhui">返回</string>
    
    <string name="paizhao">拍照</string>
    <string name="tongliang">通量</string>
    
    
    <string name="shangchuan">上传</string>
    
    <string name="imei">IMEI号</string>
    <string name="deviceID">设备ID</string>
    
    <string name="COD">COD</string>
    <string name="Mgl">mg/L</string>
    <string name="temperature">℃</string>
    <string name="ppm">Ppm</string>
    <string name="m">m</string>
    <string name="ms">m/s</string>
    <string name="liusu">流速</string>
    <string name="lingdian">零点</string>
    
    <string name="modexuanze">模式选择</string>
    <string name="celiangfangshi">测量方式</string>
    <string name="jizhumima">记住密码</string>
    <string name="version">123111 v1.2</string>
    
    <string name="celiang">测量</string>
    <string name="paishe">拍摄</string>
    <string name="shujuceliang">数据测量</string>
    <string name="shujucunchu">数据存储</string>
    <string name="tongliangjisuan">通量计算</string>
    <string name="shujushangchuan">数据上传</string>
    
    <string name="title">北京中清国研环境技术研究院</string>
    <string name="title1">WQ便携式水质分析仪</string>
    <string name="user">用户名</string>
    <string name="mima">密码</string>
    
    <string name="jisuan">计算</string>
    <string name="shendu">深度</string>
    <string name="kuandu">宽度</string>
    <string name="xiaodan">硝氮</string>
    <string name="andan">氨氮</string>
    <string name="shuiwen">水温</string>
    <string name="dizhi">地址</string>
    
    <string name="zhijing">直径</string>
    <string name="changdu">长度</string>
    
    
    <string name="shoudongceliang">手动测量</string>
    <string name="minute">分钟</string>
    <string name="hour">小时</string>
    <string  name="zidong">自动</string>
    <string  name="name">名称</string>
    
    <string  name="lianjie">连接</string>
    <string  name="connecting">正在连接</string>
    <string  name="connected">连接成功</string>
    <string  name="shuaxin">刷新</string>
    <string  name="GPS">GPS</string>
    <string  name="lte">4G LTE</string>
    <string  name="dianchi">电量</string>
    <string  name="latitude">纬度</string>
    <string  name="longtitude">经度</string>
    <string  name="time">时间</string>
    
    <string  name="activatelocation">请开启GPS！</string>
    
    <string  name="quyangcishu">取样次数</string>
    <string  name="codtongliang">COD通量g/s</string>
    <string  name="xiaodantongliang">硝氮通量g/s</string>
    <string  name="andantongliang">氨氮通量g/s</string>
    
    
    <string  name="tixing">梯形</string>
    <string  name="juxing">矩形</string>
    <string  name="yuanxing">圆形</string>
    
    <string  name="zero">0</string>
    
    <string  name="shangdi">上底</string>
    <string  name="xiadi">下底</string>
    
    <string  name="shujuceliangtext">采集传感器数据的时间可能得需要30s-40s</string>
    <string  name="danwei">g/s</string>
    
    
    

</resources>
